test v1.0.0.3 module payment(fix VNPAY service)